# codex-clawd-status-macos

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES  install.sh  pyproject.toml  requirements-dev.txt
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md
docs/superpowers/plans/: 2026-07-15-local-installer-mvp.md  2026-07-15-public-release-v0.1.0.md  2026-07-16-codex-codebuddy-workbuddy-v0.2.0.md  2026-07-16-macos-power-lifecycle.md  2026-07-16-multi-client-status-arbitration.md
docs/superpowers/specs/: 2026-07-15-apple-silicon-one-command-installer-design.md  2026-07-16-codex-codebuddy-workbuddy-integration-design.md  2026-07-16-macos-power-lifecycle-design.md  2026-07-16-multi-client-status-arbitration-design.md
packaging/: clawd-status.spec  entrypoint.py
scripts/: build-local.sh  codex_session_watch.py  package-release.sh
src/codex_clawd_status_macos/: buddy_hooks_config.py  cli.py  hooks_config.py  installer.py  launch_agent.py  macos_power.py  runtime_command.py  supervisor.py
tests/: test_buddy_hook.py  test_buddy_hooks_config.py  test_cli.py  test_hooks_config.py  test_hub_compat.py  test_hub_queue.py  test_installer.py  test_launch_agent.py  test_macos_power.py  test_payload.py  test_platform.py  test_public_installer.py  test_release_archive.py  test_runtime_command.py  test_session_watch.py  test_status_arbiter.py  test_supervisor.py
