[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-clawd-status-macos"
version = "0.3.3"
requires-python = ">=3.9"
dependencies = ["bleak>=0.21", "pyserial>=3.5"]

[project.scripts]
clawd-status = "codex_clawd_status_macos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "vendor/codex-status-LED/scripts"]
testpaths = ["tests"]
